# data_analysis

./: README.md  README.rst  pyproject.toml
data_analysis/: bike-stats.ipynb  vg-stats.ipynb
data_analysis/.ipynb_checkpoints/: bike-stats-checkpoint.ipynb
linear-regression/.ipynb_checkpoints/: linear_regression-checkpoint.ipynb
